Successfull fetch and Ip extraction

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <button id="downloadBtn">Download Game</button>
   <div id="root">
     <h1>Leaderboard</h1>
     <ul id="leaderboard"></ul>
