Game download works from aws

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 
   <div id="root">
 
-    <h1>Huba's 2D Game</h1>
+    <h1 id="title">Huba's 2D Game</h1>
     <div id="downloadBox">
       <form id="userForm">
         <label for="username">Provide a username for the leaderboards</label>
