--- a/client/index.html
+++ b/client/index.html
@@ -12,19 +12,22 @@
 
   <div id="root">
     <div class="content-container">
-      <h1 id="title">Huba's 2D Game</h1>
-      <div id="downloadBox">
-        <form id="userForm">
-          <label for="username">Provide a username for the leaderboards</label>
-          <input type="text" id="username" name="username" default="Bob" required>
-        </form>
-        <div id="button-container">
-          <button id="downloadButton">Download</button>
+      <div id="gameContainer">
+        <h1 id="title">Huba's 2D Game</h1>
+        <div id="downloadBox">
+          <form id="userForm">
+            <label for="username">Provide a username for the leaderboards</label>
+            <input type="text" id="username" name="username" default="Bob" required>
+          </form>
+          <div id="button-container">
+            <button id="downloadButton">Download</button>
+          </div>
         </div>
       </div>
-      <h1>Leaderboard</h1>
-      <p>Some content here...</p>
-      <ul id="leaderboard"></ul>
+      <div id="leaderboardCOntainer">
+        <h1>Leaderboard</h1>
+        <ul id="leaderboard"></ul>
+      </div>
     </div>
   </div>
   <script src="script.js"></script>
