--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="body">
   <div id="root">
+    <div class="background">
+      <span> </span>
+    </div>
     <div class="content-container">
       <div class="game-container">
         <h1 id="title">Huba's 2D Game</h1>
@@ -28,8 +31,7 @@
         <ul id="leaderboard"></ul>
       </div>
     </div>
-  </div>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
